syntax = "proto3";

option csharp_namespace = "MessagingService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package MessageRpc;

service MessageServiceRpc {
  rpc SendMessage (SendMessageRequestRpc) returns (google.protobuf.Empty);
}

message SendMessageRequestRpc {
  string messageText = 1;
  google.protobuf.Timestamp sentAt = 2;
  string messageId = 3;
}